--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Old Page</title>
+        <title>Payment success</title>
      <meta charset="UTF-8" />
-     <meta http-equiv="refresh" content="3; URL=https://www.hubspot.com/" />
+     <meta http-equiv="refresh" content="0; URL=subscript://payment-success" />
    </head>
    <body>
-     <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://www.hubspot.com/">here</a> to go to the HubSpot homepage.</p>
+     <p>This page has been moved. If you are not redirected within 5 seconds, click <a href="subscript://payment-success">here</a> to go to the HubSpot homepage.</p>
    </body>
 </html>
