Update and rename billing-portal-return to billing-portal-return.html

--- a/billing-portal-return.html
+++ b/billing-portal-return.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Payment success</title>
+        <title>Billing portal</title>
      <meta charset="UTF-8" />
      <meta http-equiv="refresh" content="0; URL=subscript://billing-portal-return" />
    </head>
